--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@
 
 .DS_Store
 
+
+/papers/Koop_Korobilis_2016/
+/papers/Koop_Korobilis_2013/
+/papers/Fruehwirth-Schnatter_Wagner_2019/
+/papers/Koop_Korobolis_2016/
+/papers/Korobolis_2016/
+/papers/Korobolis_Pettenuzzo_2019/
+
+
 # Session Data files
 .RData
 
